[package]

name = "piston-gfx_texture"
version = "0.16.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "eddyb"
]
keywords = ["texture", "gfx", "graphics", "piston"]
description = "A Gfx texture representation that works nicely with Piston libraries"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/gfx_texture.git"
homepage = "https://github.com/pistondevelopers/gfx_texture"

[lib]

name = "gfx_texture"
path = "src/lib.rs"

[dependencies]
gfx = "0.12.0"
gfx_core = "0.4.0"
image = "0.10.0"
piston-texture = "0.5.0"
